--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div id="app"></div>
-<script src="/dist/build.js"></script>
+<script src="/customScroll/dist/build.js"></script>
 </body>
 </html>
